Update index.html meta description and title for improved branding

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="Have Fun" content="You can only find thing you already know." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Have Fun</title>
