--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Vinyl:wght@400&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <link rel="icon" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
