Implement pagination in Movies and TwentySix components; add Material Icons link in index.html; enhance layout and animations for improved user experience

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Vinyl:wght@400&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
     <meta charset="utf-8" />
     <link rel="icon" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
